# mihoyo-announcement-api

./: README.md  index.ts  main.py  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
app/models/bh3/: content.py  list.py
app/models/hk4e/: content.py  list.py
app/models/hkrpg/: content.py  list.py
app/models/nap/: content.py  list.py
app/service/: bh3.py  hk4e.py  hkrpg.py  nap.py
app/utils/: __init__.py  datetime.py  request.py
shared/: constant.ts  datetime.ts
shared/api/bh3/: index.ts
shared/api/hk4e/: index.ts
shared/api/hk4e/schema/: getAnnContent.ts  getAnnList.ts
shared/api/hkrpg/: index.ts
shared/api/hkrpg/schema/: getAnnList.ts
shared/api/nap/: index.ts
shared/api/nap/schema/: getAnnContent.ts  getAnnList.ts
tests/: api.test.ts  test_timezone.py
tests/basic/: datetime.test.ts
