[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "pydantic",
    "beautifulsoup4",
    "fastapi",
    "loguru",
    "aiocache",
]

[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint]
extend-select = [
    "A",    # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
    "B006", #https://docs.astral.sh/ruff/rules/mutable-argument-default/
    "I",    #https://docs.astral.sh/ruff/rules/#isort-i
    "UP",   #https://docs.astral.sh/ruff/rules/#pyupgrade-up
]
ignore = [
    "F401", # https://docs.astral.sh/ruff/rules/unused-import/
    "E402", # https://docs.astral.sh/ruff/rules/module-import-not-at-top-of-file/
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "fastapi[standard]",
    "pytest",
    "uvicorn",
]
